// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package agntcy.oasfsdk.translation.v1;

import "google/protobuf/struct.proto";

// TranslationService provides methods to generate artifacts from OASF objects.
service TranslationService {
  // RecordToGHCopilot generates a GHCopilot config from a Record.
  rpc RecordToGHCopilot(RecordToGHCopilotRequest) returns (RecordToGHCopilotResponse);

  // GHCopilotToRecord generates a Record from a GHCopilot config.
  rpc GHCopilotToRecord(GHCopilotToRecordRequest) returns (GHCopilotToRecordResponse);

  // RecordToA2A generates an A2A card from a Record.
  rpc RecordToA2A(RecordToA2ARequest) returns (RecordToA2AResponse);

  // A2AToRecord generates a Record from an A2A card.
  rpc A2AToRecord(A2AToRecordRequest) returns (A2AToRecordResponse);
}

message RecordToGHCopilotRequest {
  // The Record object to be converted into a GHCopilot config.
  google.protobuf.Struct record = 1;
}

message RecordToGHCopilotResponse {
  // The generated GHCopilot config in a structured format.
  google.protobuf.Struct data = 1;
}

message GHCopilotToRecordRequest {
  // The GHCopilot config to be converted to Record object.
  google.protobuf.Struct data = 1;
}

message GHCopilotToRecordResponse {
  // The generated Record object in a structured format.
  google.protobuf.Struct record = 1;
}

message RecordToA2ARequest {
  // The Record object to be converted into an A2A card.
  google.protobuf.Struct record = 1;
}

message RecordToA2AResponse {
  // The generated A2A card data in a structured format.
  google.protobuf.Struct data = 1;
}

message A2AToRecordRequest {
  // The A2A config to be converted to Record object.
  google.protobuf.Struct data = 1;
}

message A2AToRecordResponse {
  // The generated Record object in a structured format.
  google.protobuf.Struct record = 1;
}
